[gh-440] Fix loader color in dark mode

--- a/source/WebApp/less/imports/dark.less
+++ b/source/WebApp/less/imports/dark.less
@@ -32,6 +32,8 @@
 
     --modal-background-color: @dark-background-color;
 
+    --content-loader-color: @dark-text-color;
+
     color: @dark-text-color;
     background: @dark-background-color;
 
